fixed wrapping in content

--- a/docroot/profiles/wetkit/themes/wetkit_bootstrap/css/tiffin_custom.css
+++ b/docroot/profiles/wetkit/themes/wetkit_bootstrap/css/tiffin_custom.css
@@ -29,6 +29,14 @@ main {
 	padding-bottom: 0 !important;
 }
 
+.field-items {
+	word-wrap: break-word;
+	-webkit-hyphens: auto;
+	   -moz-hyphens: auto;
+	    -ms-hyphens: auto;
+	        hyphens: auto;
+}
+
 .flexslider {
 	margin: 0;
 }
