--- a/docroot/profiles/wetkit/themes/wetkit_bootstrap/sass/tiffin/components/_base.scss
+++ b/docroot/profiles/wetkit/themes/wetkit_bootstrap/sass/tiffin/components/_base.scss
@@ -30,10 +30,10 @@ main {
   padding-bottom: 0 !important;
 }
 
-//.pane-content {
-//  word-wrap: break-word;
-//  hyphens: auto;
-//}
+.field-items {
+  word-wrap: break-word;
+  hyphens: auto;
+}
 
 .flexslider {
   margin: 0;
